[project]
name = "flask-mongoengine"
description = "Flask extension that provides integration with MongoEngine and WTF model forms."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD 3-Clause License"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: Flask",
]
dependencies = [
  "Flask>=1.1.4",
  "mongoengine>=0.21",
  'importlib-metadata; python_version<"3.8"',
]
keywords = [
  "flask",
  "wtf",
  "wtf-forms",
  "forms",
  "mongo",
  "pymongo",
  "mongoengine",
  "extension"
]
authors = [
  {name = "Ross Lawley", email = "ross.lawley@gmail.com"}
]
maintainers = [
  {name = "Andrey Shpak", email = "ashpak@ashpak.ru"}
]
dynamic = ["version"]

[project.optional-dependencies]
wtf = ["WTForms[email]>=3.0.0",
    "Flask-WTF>=0.14.3",
]
toolbar = ["Flask-DebugToolbar>=0.11.0"]
dev = [
  "black==22.6.0",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "nox",
  "Pillow>=7.0.0",
  "blinker",
  "mongomock@git+https://github.com/idoshr/mongomock.git",  # TEMP
]
legacy = ["MarkupSafe==2.0.1"]
legacy-dev = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "Pillow>=7.0.0",
  "blinker",
  "mongomock",
]

[project.urls]
Homepage = "https://github.com/MongoEngine/flask-mongoengine"
Documentation = "http://docs.mongoengine.org/projects/flask-mongoengine/en/latest/"
Repository = "https://github.com/MongoEngine/flask-mongoengine"
Changelog = "https://github.com/MongoEngine/flask-mongoengine/releases"

[build-system]
requires = [
  "setuptools>=45",
  "setuptools_scm[toml]>=6.3.1",
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
platforms = ["any"]
packages=["flask_mongoengine", "flask_mongoengine.wtf"]

[tool.setuptools.dynamic]
version = {attr = "flask_mongoengine._version.version"}

[tool.setuptools_scm]
write_to = "flask_mongoengine/_version.py"

[tool.black]
line-length = 88
target-version = ['py37']
exclude = '''
/(
    \.eggs
  | \.git
  | \.tox
  | \.venv
  | \.vscode
  | docs
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pytest.ini_options]
#addopts = "--cov=flask_mongoengine --cov-config=setup.cfg"
testpaths = ["tests"]
filterwarnings = [
  "error",
  "ignore::ResourceWarning",
  "ignore::DeprecationWarning:flask_mongoengine",
  "ignore::DeprecationWarning:tests",
  "ignore:.*deprecated and ignored since IPython.*:DeprecationWarning"
  ]
